--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 					<label for="desc-2">Details</label>
 					<div class="section-fluid desc-sec accor-1">
 						<p>
-							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id totam tempora enim officia
-							veritatis hic.
+							Looking for wooden cushion chair online in India? Shop for the best wooden cushion chair 
+							from our collection of exclusive, customized & handmade products.
 						</p>
 					</div>
 					<div class="section-fluid desc-sec accor-2">
